fix: categories' covers in home page

--- a/src/components/Category/Category.scss
+++ b/src/components/Category/Category.scss
@@ -10,6 +10,9 @@
         &-name{
             padding: 12px 0;
         }
+        .category-item-img {
+            background-color: #e0dede9e;
+        }
     }
 
     @media screen and (min-width: 576px){
